--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,22 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "BasePixel";
+  src: url("./fonts/BasePixel-LowResolution.woff2") format("woff2"), url("./fonts/BasePixel-LowResolution.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.base-pixel {
+  font-family: "BasePixel", sans-serif;
+  letter-spacing: 0.02em;
+}
+
+.bg-base-blue {
+  background-color: #0053ff;
+}
+
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
