--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,18 @@
 
 @font-face {
   font-family: "BasePixel-Low";
-  src: url("./fonts/BasePixel-LowResolution.woff2") format("woff2"), url("./fonts/BasePixel-LowResolution.woff") format("woff");
+  src:
+    url("./fonts/BasePixel-LowResolution.woff2") format("woff2"),
+    url("./fonts/BasePixel-LowResolution.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "BasePixel-Medium";
-  src: url("./fonts/BasePixel-MediumResolution.woff2") format("woff2"), url("./fonts/BasePixel-MediumResolution.woff") format("woff");
+  src:
+    url("./fonts/BasePixel-MediumResolution.woff2") format("woff2"),
+    url("./fonts/BasePixel-MediumResolution.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
